--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="colorNegro">#000706</color>
+    <color name="colorVerde">#2BC52B</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
